Fixed wrong scoped CSS alignment rule

--- a/src/sections/team/index.styl
+++ b/src/sections/team/index.styl
@@ -12,13 +12,13 @@ section.who-we-are
     h2
       margin-bottom 50px
 
-  .description
-    width 48%
-    float left
-    text-align justify
+    .description
+      width 48%
+      float left
+      text-align left
 
-    &.left
-      margin-right 4%
+      &.left
+        margin-right 4%
 
 section.team
   background-color bg-color-2
